some updates to the UIs as well as a preliminary version of the http UI
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@6666 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8